# news

./: Cargo.toml  README.md  alter.sql  code.html  env  html.html  image.html  image.json  index.html  java.html  login.html  news.html  news.json  news.sql  okay.html  picture.html  picture.json  prompt.html  python.html  tale.html  tale_content.html
examples/: refresh.rs
instructions/: code_pre.txt  news_sys.txt  tale_detail.txt  tale_post.txt  tale_pre.txt
src/: email.rs  lib.rs  main.rs  refresh.rs  sendmail.rs  template.rs
src/apis/: apilayer.rs  bard.rs  call_builder.rs  distance.rs  gemini.rs  mistral.rs  mod.rs  newsapi.rs  openai.rs
src/aps/: news.rs
src/db/: postgres.rs
src/helpers/: command_line.rs  get.rs
src/image/: mod.rs  overlay.rs  render.rs
src/llm/: gpt.rs
