[package]
name = "news"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "gzip", "blocking"] }
serde = "^1.0.124"
serde_json = "^1.0"
serde_derive = "^1"
#serde-xml-rs = "0.6"
tokio = { version = "1", features = ["full"] }
#scraper = "0.17.1"
image = "0.24"
crossterm = "0.27"
imageproc = "0.23"
#rusttype = "0.9.3"
ril = { version = "0", features = ["png"] }
chrono = { version = "0.4", default-features = false }
html2text = "0.12"
stringreader = "0.1"
#crc32fast = "1.3.2"
regex = "1.10"
actix-web = { version="4", features = ["openssl"] }
actix-files = "0.6"
actix-rt = "2.9"
actix-identity = "0.7"
actix-ip-filter = "0.3"
openssl = "0.10"
env_logger = "0.11"
log = "0.4"
urlencoding = "2.1"
#actix-web-middleware-redirect-https = "3.0.1"
#postgres = {version = "0.19", features = ["with-chrono-0_4"]}
pgvector = { version = "0.3", features = ["postgres"] }
tokio-postgres = {version = "0.7", features = ["with-chrono-0_4"]}
whichlang = "0.1.0"
itertools = "0.12"
#futures = "0.3"
#fastembed = "3"
anyhow = "1.0"
#shannon-entropy = "1.0.0"
is-html = "0.1"
#rand = "0.8.5"
rusttype = "0.9"
#actix-session = { version="0.9.0", features=["redis-rs-session"]}
actix-session = { version="0.9", features=["cookie-session"]}
tempfile = "3.10"
filepath = "0.1"
#lettre = { version="0.11.4", features=["smtp-transport", "tokio1", "tokio1-native-tls", "builder"]}
#lettre = "0.11"
base64 = "0.21"
stemplate = "0.1"
current_platform = "0.2.0"
llmclient = "^0.1"
#actix-session = "0.9.0"
#actix-web-httpauth = "0.8.1"
#redis_rs = "0.9.0"
#strfmt = "0.2.4"
#magnet_schema = "0.8.0"
#magnet_derive = "0.8.0"
#bson = "2.7.0"
#is-html = "0.1.3"
#dashmap = "5.5.3"
#url = "2.4.1"
#lingua = "1.5"

[dev-dependencies]
#mockall = "0.11"
htmlescape = "^0.3"

[profile.release]
strip = true
opt-level = 3
#opt-level = "s"
#lto = true
#panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"

#[features]
#allow = []
